# diffutils

./: .gitignore  .x-sc_space_tab  AUTHORS  ChangeLog  ChangeLog-2008  HACKING  INSTALLME  LOCALIZE  Makefile.am  Makefile.in  NEWS  README  README-alpha  README-hacking  README-release  THANKS  TODO  acconfig.h  aclocal.m4  bootstrap  bootstrap.conf  cfg.mk  configure  configure.ac  dist-check.mk  exgettext  getmsgids  index.html  params.json  project.config
doc/: .gitignore  Makefile.am  Makefile.in  diagmeet.note  diff.texi  diffutils.info  diffutils.texi  gendocs_template  version.texi
gl/lib/: regcomp.c.diff  regex_internal.c.diff  sh-quote.c.diff
gnulib-tests/: .gitignore  Makefile.in  gnulib.mk
lib/: .gitignore  Makefile.am  Makefile.in  c-stack.c  cmpbuf.c  cmpbuf.h  config.charset  config.hin  fnmatch.c  fnmatch_.h  fnmatch_loop.c  freesoft.c  gnulib.mk  hard-locale.c  localcharset.c  posixver.c  prepargs.c  regcomp.c  setmode.c  setmode.h  sh-quote.c  version-etc.c  version-etc.h  xstrtol.c
lib/posix/: regex.h
lib/uniwidth/: width.c
m4/: .gitignore  c-stack.m4  fnmatch.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib-tool.m4  math_h.m4  mbstate_t.m4  prereq.m4  setmode.m4  stdbool.m4  vararrays.m4
man/: Makefile.am  Makefile.in  cmp.1  diff.1  diff.x  diff3.1  help2man  sdiff.1
ms/: INSTALL  Makefile.am  README  config.bat  config.h  config.sed  config.site  makefile  makefile.sed  pc.c
ms/djgpp/: config.h  makefile.sed
ms/emx/: config.h  diff.def  gnuregex.def  makefile.sed
po/: .gitignore  LINGUAS  POTFILES.in  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  diffutils.pot  el.gmo  el.po  en.po  en_US.po  eo.gmo  eo.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  (+30 more)
po/.reference/: ca.po  ca.s1  cs.po  cs.s1  da.po  da.s1  de.po  de.s1  el.po  el.s1  eo.po  eo.s1  es.po  es.s1  fi.po  fi.s1  fr.po  fr.s1  ga.po  ga.s1  gl.po  gl.s1  he.po  he.s1  hr.po  hr.s1  hu.po  hu.s1  id.po  id.s1  it.po  it.s1  ja.po  ja.s1  lv.po  lv.s1  ms.po  ms.s1  nb.po  nb.s1  (+24 more)
scripts/git-hooks/: commit-msg
src/: Makefile.am  Makefile.in  analyze.c  cmp.c  context.c  diff.c  diff.h  diff3.c  dir.c  ed.c  ifdef.c  io.c  normal.c  sdiff.c  side.c  system.h  util.c
tests/: Makefile.am  Makefile.in  basic  bignum  binary  brief-vs-stat-zero-kernel-lies  colliding-file-names  colors  diff3  envvar-check  excess-slash  function-line-vs-leading-space  help-version  ignore-matching-lines  init.sh  label-vs-func  no-newline-at-eof  stdin  strcoll-0-names  test-lib.sh
